security: added secured endpoints